# gloomy

./: .gitignore  Cargo.toml  Makefile  README.md  gloomy.pyi  pyproject.toml
.cargo/: config.toml
.github/workflows/: lint-test.yml  publish.yml
gloomy/: __init__.py  __init__.pyi  assign.py  delete.py  errors.py  gloom.py  utils.py
scripts/: bench_report.py
src/: assign.rs  bytesplit.rs  get.rs  lib.rs
tests/: smoke_test.py  test_assign.py  test_basic.py  test_bench_assign.py  test_bench_delete.py  test_bench_dict.py  test_bench_list.py  test_bench_obj.py  test_benchmark.py  test_compat.py  test_delete_compat.py
