[project]
name = "gloom"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[dependency-groups]
dev = [
    "glom>=24.11.0",
    "pytest-benchmark[histogram]>=5.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "mypy>=1.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-s",
    "--benchmark-warmup-iterations=100_000",
    "--benchmark-group-by=func",
]

[tool.ruff]
line-length = 120
