[project]
name = "gloomy"
dynamic = ["version"]
description = "glom, but not as slow"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[dependency-groups]
dev = [
    "glom>=24.11.0",
    "pytest-benchmark[histogram]>=5.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "mypy>=1.15.0",
    "maturin>=1.8.4",
    "pyinstrument>=5.0.1",
    "maturin-import-hook>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-s",
    "--benchmark-warmup-iterations=100_000",
    "--benchmark-group-by=func",
    "--benchmark-columns=min,max,mean,ops,rounds,iterations",
    "--benchmark-name=short",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
